fix(banner): broken on medium viewport (#3493)
fixes #3484

--- a/web/src/components/notification-banner/notification-banner.css
+++ b/web/src/components/notification-banner/notification-banner.css
@@ -1,10 +1,12 @@
 .banner {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    z-index: var(--top-z-index);
+    width: 100%;
+    z-index: var(--header-z-index);
     background: var(--black);
     padding-top: 20px;
     padding-bottom: 20px;
@@ -12,11 +14,6 @@
     padding-inline-end: 50px;
 
     @media (--md-down) {
-        position: sticky;
-        top: var(--header-height);
-    }
-
-    @media (--sm-down) {
         position: fixed;
         top: auto;
         bottom: 0;
@@ -31,6 +28,7 @@
         }
 
         @media (--md-down) {
+            font-size: 1.15rem;
             width: 100%;
         }
 
@@ -92,8 +90,14 @@
     .close {
         border: none;
         position: absolute;
-        right: 2rem;
+        right: 0;
         left: auto;
+        padding: 2em;
+
+        @media (--md-down) {
+            top: 1em;
+            padding: 1em;
+        }
 
         path {
             fill: var(--white);
@@ -103,41 +107,11 @@
             width: 22px;
             height: 22px;
             margin: 0 0.5rem;
-
-            @media (--md-down) {
-                width: 18px;
-                height: 18px;
-            }
-
-            @media (--sm-down) {
-                width: 14px;
-                height: 14px;
-            }
-        }
-
-        @media (--md-down) {
-            font-size: 80%;
-            padding-top: 0;
-            padding-bottom: 0;
-        }
-
-        @media (--sm-down) {
-            font-size: 65%;
-            margin-inline-start: 0.5rem;
-            height: 2.5rem;
-
-            right: 0.75rem;
-            top: 2rem;
         }
 
         [dir='rtl'] & {
-            left: 2rem;
+            left: 0;
             right: auto;
-
-            @media (--sm-down) {
-                left: 0.75rem;
-                right: auto;
-            }
         }
     }
 }
